--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: dirtconnect
+name: dreusables
 description: 'DirtConnect - Exchange construction resources and work with reputable partners'
 
 publish_to: 'none'
